# CPQUtils

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Doxyfile  README.md  cpp.hint
Web/: CMakeLists.txt  HTTPServer.cpp  HTTPServer.h  HandlerController.cpp  HandlerController.h  HttpServer.cpp  HttpServer.h  Web.cpp  Web.h
Web/clienthandlers/: AbstractClientHandler.cpp  AbstractClientHandler.h  HttpReplaceClientHandler.cpp  HttpReplaceClientHandler.h
Web/examples/: CMakeLists.txt  simpleHttpServer.cpp
cmake/: CPQUtilsConfig.cmake  cpq_glob_cpp.cmake  cpq_install_headers.cmake  doxyCmake.cmake  installHeaders.cmake  uninstall.cmake
examples/: CMakeLists.txt  simpleHttpServer.cpp
examples/arucoDeteectorExample/: CMakeLists.txt  arucoDetectorExample.cpp  aruco_map.txt  resources.qrc
examples/cameraCalibrationExample/: CMakeLists.txt  cameraCalibrationExample.cpp
examples/simpleHttpServer/: CMakeLists.txt  index.html  simpleHttpServer.cpp
examples/videoSourceExample/: CMakeLists.txt  videoSourceExample.cpp
src/: CMakeLists.txt  Core.h  Vision.h  Web.h
src/Core/: CMakeLists.txt  Macro.cpp  Macro.h  Math.h
src/Vision/: CMakeLists.txt  CpqVideoCaptureWorker.cpp  CpqVideoCaptureWorker_private.h  QCVTypes.cpp  QCVTypes.h  VideoSource.cpp  VideoSource.h
src/Vision/Aruco/: ArucoDetector.cpp  ArucoDetector.h  Common.cpp  Common.h
src/Vision/Calibration/: ChessboardCameraCalibrator.cpp  ChessboardCameraCalibrator.h
src/Vision/CpqVideoCapture/: CpqVideoCapture.cpp  CpqVideoCapture.h  CpqVideoCaptureWorker_private.cpp  CpqVideoCaptureWorker_private.h
src/Web/: CMakeLists.txt  HandlerController.cpp  HandlerController.h  HttpServer.cpp  HttpServer.h
src/Web/ClientHandlers/: AbstractClientHandler.cpp  AbstractClientHandler.h  HttpReplaceClientHandler.cpp  HttpReplaceClientHandler.h  sample.html
